変数展開処理を文字列置換の組み合わせに変更 言語リソースの追加

--- a/Core/Template/lang/core.lng
+++ b/Core/Template/lang/core.lng
@@ -7,6 +7,12 @@
     Display => 表示数
     NextPage => "次へ＞"
     PrevPage => "＜前へ"
+    // ダイアログ用
+    Yes => はい
+    Cancel => キャンセル
+    SizeDisplay => サイズ表示
+    Close => 閉じる
+    Resize => サイズ変更
 ]
 .en => [
     // for Pager Buttons
@@ -15,4 +21,19 @@
     Display => Count
     NextPage => "Next&gt;"
     PrevPage => "&lt;Prev"
+    // for Dialog
+    Yes => Yes
+    Cancel => Cancel
+    SizeDisplay => "Display Size"
+    Close => "Close"
+    Resize => "Resize"
+]
+Debug => [
+    .ja => [
+        Level => レベル
+    ]
+    .en => [
+        Level => Level
+    ]
+
 ]
