ドキュメントダウンロード機能を追加 デバッグダンプ関数を整理

--- a/app/help/View/lang/Toolbar.lng
+++ b/app/help/View/lang/Toolbar.lng
@@ -17,6 +17,7 @@ home => [
         チャプター編集 => Edit-Chapter
         チャプター追加 => Add-Chapter
         チャプター削除 => Del-Chapter
+        テキストDL => TextDownload
     ]
 ]
 
