検索機能を付加するための変更 不要なコードの削除 URLの空フィールドを削除するように変更

--- a/app/help/View/lang/common.lng
+++ b/app/help/View/lang/common.lng
@@ -15,6 +15,7 @@
         ・・・
         などを表示する
         ~
+    NoKeyword => 検索ワードが指定されていません
 ]
 .en => [
     TITLE => "Biscuits(MAP) Documents"
@@ -29,4 +30,5 @@
         ...
         Miscellaneous Data Setup
         ~
+    NoKeyword => "Keyword not prepared."
 ]
