--- a/app/pcenv/View/lang/ja_jp.lng
+++ b/app/pcenv/View/lang/ja_jp.lng
@@ -1,7 +1,7 @@
 // 言語ファイル
 
 Apps => [
-    TITLE => "パソコン台帳 on Biscuit"
+    TITLE => "パソコン台帳 on Biscuits"
     HOSTS => PC管理(ホスト・データベース)
     NAMES => PC管理(名前データベース)
 ]
