--- a/app/help/View/lang/Index.lng
+++ b/app/help/View/lang/Index.lng
@@ -1,4 +1,5 @@
 // Indexモジュールの言語ファイル
+@resource
 
 Schema => [
     .ja => [
@@ -9,34 +10,7 @@ Schema => [
         contents =>   コンテンツ,
     ]
 ]
-Popup => [
-    .ja => [
-	    Para-Edit => 段落編集
-	    Para-Ins  => 段落挿入
-	    Para-Add  => 段落追加
-	    Para-Delete => 段落削除
-        Para-Clear => 段落クリア
-        //
-        Sec-Edit => セクション編集
-        Sec-Add  => セクション追加
-        Sec-Delete => セクション削除
-        //
-	    Copy => コピー
-    ]
-    .en => [
-	    Para-Edit => "Edit Paragraph"
-	    Para-Ins  => "Insert Paragraph"
-	    Para-Add  => "Add Paragraph"
-	    Para-Delete => "Delete Paragraph"
-        Para-Clear => "Clear Paragraph"
-        //
-        Sec-Edit => "Edit Section"
-        Sec-Add  => "Add Section"
-        Sec-Delete => "Delete  Section"
-        //
-	    Copy => Copy
-    ]
-]
+
 Button => [
     .ja => [
         Update => 更新
