--- a/app/blog/View/lang/common.lng
+++ b/app/blog/View/lang/common.lng
@@ -1,7 +1,7 @@
 // アプリ共有の言語ファイル
 .ja => [
-    TITLE => "Biscuits(MAP) ドキュメント"
+    TITLE => "nTak's Blog"
 ]
 .en => [
-    TITLE => "Biscuits(MAP) Documents"
+    TITLE => "nTak's Blog"
 ]
