--- a/tools/apps/View/lang/common.lng
+++ b/tools/apps/View/lang/common.lng
@@ -1,7 +1,7 @@
 // アプリ共有の言語ファイル
 .ja => [
-    TITLE => "Biscuits(MAP) ドキュメント"
+    TITLE => "WaffleMap ドキュメント"
 ]
 .en => [
-    TITLE => "Biscuits(MAP) Documents"
+    TITLE => "WaffleMap Documents"
 ]
