PHPコードの整理 alert_response　のファイルをアプリ別に格納できるように変更

--- a/Core/Template/lang/core.lng
+++ b/Core/Template/lang/core.lng
@@ -21,6 +21,8 @@
     UserName => ユーザー名
     Password => パスワード
     SEND    => 送信
+    PassError => パスワードが違います
+    UnknownUser => 不明なユーザー
 ]
 .en => [
     // for Pager Buttons
@@ -40,4 +42,6 @@
     UserName => "User Name"
     Password => Password
     SEND    => Send
+    PassError => 'PASSWORD Missing'
+    UnknownUser => "Unknown USER"
 ]
