SQLite3でログインモデルを使うとDB lockのままとなるため、unset()で解放

--- a/Core/Template/lang/core.lng
+++ b/Core/Template/lang/core.lng
@@ -42,6 +42,6 @@
     UserName => "User Name"
     Password => Password
     SEND    => Send
-    PassError => 'PASSWORD Missing'
+    PassError => 'PASSWORD missing'
     UnknownUser => "Unknown USER"
 ]
