Add SELECT markdown syntax. Optimize pre-process for markdown call. Some type-missing BUG-dix.

--- a/Core/Template/lang/debug.lng
+++ b/Core/Template/lang/debug.lng
@@ -26,8 +26,8 @@
         Category => [
             -104 => System
             -103 => Locale
-            -102 => AppView
-            -101 => AppModel
+            -102 => View
+            -101 => Model
             -100 => Handler
         ]
     ]
