--- a/Core/Template/lang/debug.lng
+++ b/Core/Template/lang/debug.lng
@@ -4,12 +4,13 @@
     Level => [
         APP
         Category => [
-            -105 => システム
-            -104 => 言語
-            -103 => ビュー
-            -102 => モデル
-            -101 => ハンドラー
-            -100 => リソース
+            -106 => システム
+            -105 => 言語
+            -104 => ビュー
+            -103 => モデル
+            -102 => ハンドラー
+            -101 => リソース
+            -100 => エラー
         ]
     ]
     DebugInfo => デバッグ情報
@@ -25,11 +26,12 @@
     Level => [
         App
         Category => [
-            -105 => System
-            -104 => Locale
-            -103 => View
-            -102 => Model
-            -101 => Handler
+            -106 => System
+            -105 => Locale
+            -104 => View
+            -103 => Model
+            -102 => Handler
+            -101 => Resource
             -100 => Resource
         ]
     ]
